--- a/index.html
+++ b/index.html
@@ -1,2 +1,64 @@
-Hello World
-Hello Pet
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/index.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+    <title>Gary Bennett Portfolio Website</title>
+</head>
+<body>
+        <header>
+            <nav class="nav">
+                <ul class="navList">
+                    <li class="navItem"> <a href="#home"></a>Home</li>
+                    <li class="navItem"> <a href="#about"></a>About Me</li>
+                    <li class="navItem"> <a href="#projects"></a>Projects</li>
+                    <li class="navItem"> <a href="#contact"></a>Contact</li>
+                </ul>
+            </nav>
+        </header>
+
+    <div class="portfolioContainer">
+
+        <section class="name" id="home">
+            <h1 class="sectionTitle sectionTitle--sectionMe">Hi! I'm <strong>Gary Bennett</strong></h1>
+            <p>I'm a Junior Software Developer seeking new opportunities</p>
+        </section>
+
+        <section class="about" id="about">
+            <h2 class="sectionTitle sectionTitle--sectionAbout">&lt;About me&gt;</h2>
+            <h3> &lt;/About me&gt;</h3>
+        </section>
+
+        <section class="projects" id="projects">
+            <h2 class="sectionTitle sectionTitle--sectionProjects">&lt;Projects&gt;</h2>
+                <a href="">
+                    <img src="project1" alt="" class="portfolioImg">
+                </a>
+
+                <a href="">
+                    <img src="project2" alt="" class="portfolioImg">
+                </a>
+
+                <a href="">
+                    <img src="project3" alt="" class="portfolioImg">
+                </a>
+
+            <h3> &lt;/projects&gt;</h3>
+        </section>
+
+        <section class="contact" id="contact">
+            <h2 class="sectionTitle sectionTitle--sectionContact">&lt;Let's Talk!&gt;</h2>
+            <p>I am always up for a chat or for any questions/enquiries you have about my work.</p>
+            <p>Please feel free to connect with me on LinkedIn or Github</p>
+            <h3> &lt;/let's talk!&gt;</h3>
+        </section>
+
+        <footer>
+
+        </footer>
+    </div>
+</body>
+</html>
