spotlight effect added to background image

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/nav.css">
+
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+
     <title>Gary Bennett Portfolio Website</title>
 </head>
 <body>
         <header>
             <nav class="nav">
-                <ul class="navList">
+                <ul class=" listStyle navList">
                     <li class="navItem"> <a href="#home"></a>Home</li>
                     <li class="navItem"> <a href="#about"></a>About Me</li>
                     <li class="navItem"> <a href="#projects"></a>Projects</li>
@@ -28,8 +32,9 @@
         </section>
 
         <section class="about" id="about">
-            <h2 class="sectionTitle sectionTitle--sectionAbout">&lt;About me&gt;</h2>
-            <h3> &lt;/About me&gt;</h3>
+            <p>&lt;About me&gt;</p>
+            <h2 class="sectionTitle sectionTitle--sectionAbout">About me</h2>
+            <p> &lt;/About me&gt;</p>
         </section>
 
         <section class="projects" id="projects">
@@ -53,12 +58,17 @@
             <h2 class="sectionTitle sectionTitle--sectionContact">&lt;Let's Talk!&gt;</h2>
             <p>I am always up for a chat or for any questions/enquiries you have about my work.</p>
             <p>Please feel free to connect with me on LinkedIn or Github</p>
+            <ul class="listStyle social">
+                <li><a href="linkedin"></a>linkedin</li>
+                <li><a href="mailto:garybennett6@outlook.com"></a>email</li>
+                <li><a href="github"></a>github</li>
+
+            </ul>
+
             <h3> &lt;/let's talk!&gt;</h3>
         </section>
-
-        <footer>
-
-        </footer>
     </div>
+        <footer>
+        </footer>
 </body>
 </html>
