added some borders to work with tomorrow

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="portfolioContainer">
 
         <section class="name" id="home">
-            <h1 class="sectionTitle sectionTitle--sectionMe">Hi! I'm <strong>Gary Bennett</strong></h1>
+            <h1 class="sectionTitle sectionTitle--sectionMe">Hi, I'm <strong>Gary Bennett</strong></h1>
             <p>I'm a Junior Software Developer seeking new opportunities</p>
         </section>
 
@@ -67,8 +67,10 @@
 
             <h3> &lt;/let's talk!&gt;</h3>
         </section>
-    </div>
+    
         <footer>
+            <div class="icons">Icons made by <a href="https://www.flaticon.com/authors/vidyavidz" title="vidyavidz">vidyavidz</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
         </footer>
+    </div>
 </body>
 </html>
