--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <header>
             <nav class="nav">
                 <ul class=" listStyle navList">
-                    <li class="navItem"> <a href="#home"></a>Home</li>
-                    <li class="navItem"> <a href="#about"></a>About Me</li>
-                    <li class="navItem"> <a href="#projects"></a>Projects</li>
-                    <li class="navItem"> <a href="#contact"></a>Contact</li>
+                    <li class="navItem"> <a href="#home">Home</a></li>
+                    <li class="navItem"> <a href="#about">About Me</a></li>
+                    <li class="navItem"> <a href="#projects">Projects</a></li>
+                    <li class="navItem"> <a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -32,13 +32,16 @@
         </section>
 
         <section class="about" id="about">
-            <p>&lt;About me&gt;</p>
+            <!-- <p>&lt;About me&gt;</p> -->
+            <!-- <h2 class="sectionTitle sectionTitle--sectionAbout">About me</h2> -->
             <h2 class="sectionTitle sectionTitle--sectionAbout">About me</h2>
-            <p> &lt;/About me&gt;</p>
+            <!-- <p> &lt;/About me&gt;</p> -->
         </section>
 
         <section class="projects" id="projects">
-            <h2 class="sectionTitle sectionTitle--sectionProjects">&lt;Projects&gt;</h2>
+            <!-- <h2 class="sectionTitle sectionTitle--sectionProjects">&lt;Projects&gt;</h2> -->
+            <h2 class="sectionTitle sectionTitle--sectionProjects">Projects</h2>
+
                 <a href="">
                     <img src="project1" alt="" class="portfolioImg">
                 </a>
@@ -51,26 +54,29 @@
                     <img src="project3" alt="" class="portfolioImg">
                 </a>
 
-            <h3> &lt;/projects&gt;</h3>
+            <!-- <h3> &lt;/projects&gt;</h3> -->
         </section>
 
         <section class="contact" id="contact">
-            <h2 class="sectionTitle sectionTitle--sectionContact">&lt;Let's Talk!&gt;</h2>
+            <!-- <h2 class="sectionTitle sectionTitle--sectionContact">&lt;Let's Talk!&gt;</h2> -->
+            <h2 class="sectionTitle sectionTitle--sectionContact">Let's Talk!</h2>
+
             <p>I am always up for a chat or for any questions/enquiries you have about my work.</p>
             <p>Please feel free to connect with me on LinkedIn or Github</p>
             <ul class="listStyle social">
-                <li><a href="linkedin"></a>linkedin</li>
-                <li><a href="mailto:garybennett6@outlook.com"></a>email</li>
-                <li><a href="github"></a>github</li>
+                <li><a href="linkedin">LinkedIn</a></li>
+                <li><a href="mailto:garybennett6@outlook.com">Email</a></li>
+                <li><a href="github">Github</a></li>
 
             </ul>
 
-            <h3> &lt;/let's talk!&gt;</h3>
+            <!-- <h3> &lt;/let's talk!&gt;</h3> -->
         </section>
     
-        <footer>
-            <div class="icons">Icons made by <a href="https://www.flaticon.com/authors/vidyavidz" title="vidyavidz">vidyavidz</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-        </footer>
+
     </div>
+    <footer>
+        <div class="icons">Icons made by <a href="https://www.flaticon.com/authors/vidyavidz" title="vidyavidz">vidyavidz</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    </footer>
 </body>
 </html>
