--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <header>
             <nav class="nav">
                 <ul class=" listStyle navList">
-                    <li class="navItem"> <a href="#home">Home</a></li>
-                    <li class="navItem"> <a href="#about">About Me</a></li>
-                    <li class="navItem"> <a href="#projects">Projects</a></li>
-                    <li class="navItem"> <a href="#contact">Contact</a></li>
+                    <li class="navItem"> <a href="#home"><div class="navItemText">Home</div></a></li>
+                    <li class="navItem"> <a href="#about"><div class="navItemText">About Me</div></a></li>
+                    <li class="navItem"> <a href="#projects"><div class="navItemText">Projects</div></a></li>
+                    <li class="navItem"> <a href="#contact"><div class="navItemText">Contact</a></div></li>
                 </ul>
             </nav>
         </header>
@@ -75,8 +75,8 @@
     
 
     </div>
-    <footer>
+    <!-- <footer>
         <div class="icons">Icons made by <a href="https://www.flaticon.com/authors/vidyavidz" title="vidyavidz">vidyavidz</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-    </footer>
+    </footer> -->
 </body>
 </html>
