adjusted content height of flexbox and added links to projects

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
             <!-- <h2 class="sectionTitle sectionTitle--sectionAbout">About me</h2> -->
             <h2 class="sectionTitle sectionTitle--sectionAbout">About me</h2>
             <!-- <p> &lt;/About me&gt;</p> -->
+            <p> 🎓 Recent graduate of the CodeClan Professional Software Development course in Edinburgh
+                <br>
+                🧩 Currently expanding my knowledge of all things code one piece at a time
+                <br>
+                🔍 Always on the look out for anything I can do to improve my skills
+                <br>
+                🖤 🤍 Fun fact: I've been a Newcastle United season ticket holder for the last 17 years
+            </p>
         </section>
 
         <section class="projects" id="projects">
@@ -43,15 +51,15 @@
             <h2 class="sectionTitle sectionTitle--sectionProjects">Projects</h2>
 
                 <a href="">
-                    <img src="project1" alt="" class="portfolioImg">
+                    <img src="https://github.com/garyb6/Educational-Goals" alt="" class="portfolioImg">
                 </a>
 
                 <a href="">
-                    <img src="project2" alt="" class="portfolioImg">
+                    <img src="https://github.com/garyb6/Europeer-Ins" alt="" class="portfolioImg">
                 </a>
 
                 <a href="">
-                    <img src="project3" alt="" class="portfolioImg">
+                    <img src="https://github.com/garyb6/Stadium-Bucket-List" alt="" class="portfolioImg">
                 </a>
 
             <!-- <h3> &lt;/projects&gt;</h3> -->
@@ -62,11 +70,11 @@
             <h2 class="sectionTitle sectionTitle--sectionContact">Let's Talk!</h2>
 
             <p>I am always up for a chat or for any questions/enquiries you have about my work.</p>
-            <p>Please feel free to connect with me on LinkedIn or Github</p>
+            <p>Please feel free to connect with me on LinkedIn or Github or drop me an email through the links below</p>
             <ul class="listStyle social">
                 <li><a href="linkedin">LinkedIn</a></li>
                 <li><a href="mailto:garybennett6@outlook.com">Email</a></li>
-                <li><a href="github">Github</a></li>
+                <li><a href="https://github.com/garyb6">Github</a></li>
 
             </ul>
 
