--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
             <!-- <h2 class="sectionTitle sectionTitle--sectionProjects">&lt;Projects&gt;</h2> -->
             <h2 class="sectionTitle sectionTitle--sectionProjects">Projects</h2>
 
-                <a href="">
-                    <img src="https://github.com/garyb6/Educational-Goals" alt="" class="portfolioImg">
+                <a href="https://github.com/garyb6/Educational-Goals">
+                    <img src="" alt="" class="portfolioImg">
                 </a>
 
-                <a href="">
-                    <img src="https://github.com/garyb6/Europeer-Ins" alt="" class="portfolioImg">
+                <a href="https://github.com/garyb6/Europeer-Ins">
+                    <img src="" alt="" class="portfolioImg">
                 </a>
 
-                <a href="">
-                    <img src="https://github.com/garyb6/Stadium-Bucket-List" alt="" class="portfolioImg">
+                <a href="https://github.com/garyb6/Stadium-Bucket-List">
+                    <img src="" alt="" class="portfolioImg">
                 </a>
 
             <!-- <h3> &lt;/projects&gt;</h3> -->
@@ -72,10 +72,15 @@
             <p>I am always up for a chat or for any questions/enquiries you have about my work.</p>
             <p>Please feel free to connect with me on LinkedIn or Github or drop me an email through the links below</p>
             <ul class="listStyle social">
-                <li><a href="linkedin">LinkedIn</a></li>
-                <li><a href="mailto:garybennett6@outlook.com">Email</a></li>
-                <li><a href="https://github.com/garyb6">Github</a></li>
-
+                <li><a href="https://www.linkedin.com/in/gary-bennett-041605230/">
+                        <img src="./images/linkedIn.svg" alt="My LinkedIn" class="contactImg">
+                </a></li>
+                <li><a href="mailto:garybennett6@outlook.com">
+                        <img src="./images/mail.png" alt="Email Me" class="contactImg">
+                </a></li>
+                <li><a href="https://github.com/garyb6">
+                        <img src="./images/github.svg" alt="My GitHub" class="contactImg">
+                </a></li>
             </ul>
 
             <!-- <h3> &lt;/let's talk!&gt;</h3> -->
